End of one grid approach

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="header">
         <img class = "logo" src="./img/battleship-logo.jpg" alt="">
     </div>
+    <div class="message"></div>
     <div class="loadingScreen"></div>
     <div class="menuScreen">
         <div class = "playerSelection">
