--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
         <img class = "logo" src="./img/battleship-logo.jpg" alt="">
     </div>
     <div class="loadingScreen"></div>
+    <div class="gameOverScreen">
+        <div class="gameOverMessage"></div>
+        <div id="restart" class = "hide">New Game</div>
+    </div>
         <div class="body">
             <div class="message"></div>
-            
             <div class="menuScreen">
                 <div class = "playerSelection">
                     <div class = "computer" id = "selected">
